--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,19 @@
-/node_modules
-/vendor
-/.vscode
 /.phpunit.cache
-/storage/framework/cache/data/*
-/storage/framework/laravel-excel/*
-/storage/framework/sessions/*
-/storage/framework/testing/*
-/storage/framework/views/*.php
-/storage/debugbar/*
-/storage/logs/*
-/storage/app/public/profile-pictures/*
-/storage/app/public/inventory-item-photos/*
-/public/build/assets/*.js
-/public/build/assets/*.css
-/public/storage
+/node_modules
+/public/build
 /public/hot
-accounts
+/public/storage
+/storage/*.key
+/vendor
 .env
+.env.backup
+.env.production
+.phpunit.result.cache
+Homestead.json
+Homestead.yaml
+auth.json
+npm-debug.log
+yarn-error.log
+/.fleet
+/.idea
+/.vscode
