--- a/package.json
+++ b/package.json
@@ -8,14 +8,13 @@
         "@tailwindcss/typography": "^0.5.0",
         "alpinejs": "^3.10.4",
         "autoprefixer": "^10.4.12",
-        "axios": "^0.21",
+        "axios": "^1.1.2",
         "flowbite": "^1.5.3",
-        "laravel-vite-plugin": "^0.5.4",
+        "laravel-vite-plugin": "^0.7.5",
         "lodash": "^4.17.19",
         "postcss": "^8.4.16",
         "postcss-import": "^14.0.1",
         "tailwindcss": "^3.1.8",
-        "vite": "^3.1.3",
-        "vite-plugin-mkcert": "^1.10.1"
+        "vite": "^4.0.0"
     }
 }
